--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -1,33 +1,13 @@
-name: npm test
-
-on: [push]
+name: Run npm test
+on: push
 
 jobs:
-
   test:
-
     runs-on: ubuntu-latest
-
-    strategy:
-
-      matrix:
-
-        node_version: [12.x]
-
     steps:
-
       - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-
-        uses: actions/setup-node@v1
-
+      - uses: actions/setup-node@v2
         with:
-
-          node-version: ${{ matrix.node-version }}
-
+          node-version: '14'
       - run: npm install
-
-      - run: npm run build --if-present
-
       - run: npm test
